--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-asd
+﻿<!DOCTYPE html>
+
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+
+<head>
+    <meta charset="utf-8" />
+    <link rel="stylesheet" href="style.css" >
+    <title>Dominik weboldala</title>
+</head>
+<body>
+    <header>blckhndr</header>
+    <div class="row">
+        <div class="column left">
+            <div>a</div>
+        </div>
+        <div class="column middle">
+            <h2 class="centered">Title</h2>
+            <p>Some text..</p>
+        </div>
+        <div class="column right">
+            <div>a</div>
+        </div>
+    </div>
+</body>
+</html>
