+ added bg + recreated header

--- a/index.html
+++ b/index.html
@@ -8,18 +8,26 @@
     <title>Dominik weboldala</title>
 </head>
 <body>
-    <header>blckhndr</header>
-    <div class="row">
-        <div class="column left">
-            <div>a</div>
+    
+        <header>
+            <a href="#" class="clickable logo">Dominik weboldala</a>
+            <a href="./info.html" class="clickable">Rólam</a>
+            <a href="#" class="clickable">Galéria</a>
+            <a href="#" class="clickable">blckhndr</a>
+            <a href="#" class="clickable">blckhndr</a>
+        </header>
+        <div class="row">
+            <div class="column left">
+                <p></p>
+            </div>
+            <div class="column middle">
+                <h2 class="centered">Dominik weboldala</h2>
+                <p>Some text..</p>
+            </div>
+            <div class="column right">
+                <p></p>
+            </div>
         </div>
-        <div class="column middle">
-            <h2 class="centered">Title</h2>
-            <p>Some text..</p>
-        </div>
-        <div class="column right">
-            <div>a</div>
-        </div>
-    </div>
+        <div class="border"></div>
 </body>
 </html>
